--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ecommerce-fe",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:44331",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,9 +10,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.4.2",
+    "@mui/material": "^5.4.3",
+    "@mui/styled-engine-sc": "^5.4.2",
+    "@mui/styles": "^5.4.2",
+    "axios": "^0.26.0",
+    "babel-plugin-import": "^1.13.3",
+    "babel-plugin-styled-components": "^2.0.3",
+    "cors": "^2.8.5",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/node": "17.0.19",
